fix: add media query for mobile to prevent overlap on character sheet

--- a/css/mosh.css
+++ b/css/mosh.css
@@ -363,6 +363,9 @@ p {
 
 .mosh .stress {grid-area: stress;}
 .mosh .health {grid-area: centercol;}
+@media screen and (max-width: 660px) {
+  .mosh .health {grid-area: 3 / 1 / 3 / 4;}
+}
 .mosh .healthspread {width:96%;}
 
 .mosh .char-header h1.charname {
